src/style.css
body {
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: repeat(10, 1fr);
    height: 100vh;
    padding: 0;
    margin: 0;
    background-color: #556F44;
    font-family: Lexend Deca;
    box-sizing: border-box;
}

header {
    grid-row: 1 / 2;
    grid-column: 1 / -1 ;
    display: flex;
    padding-left: 50px;
    margin-top: 25px;
}

.melon-icon {
    padding-top: 10px;
}

h1 {
    color: #f1f1f1;
    font-size: 30px;
    font-weight: 500;
    order: 2;
    padding-left: 3px;
}

nav {
    grid-row: 2 / -1;
    margin-top: 40px;
}

nav ul {
    padding-bottom: 30px;
}

nav li {
    list-style-type: none;
    font-size: 18px;
    padding-bottom: 30px;
    font-weight: 300;
}

#nav-1 {
    color: #C7DEB6;
    margin-left: 22px;
}

.nav1-item {
    display: flex;
    align-items: center;
}

.nav1-item img{
    padding-right: 15px;
}


#nav-2 {
    color: #f1f1f1;
}

#nav-subhead {
    font-size: 15px;
    font-weight: 300;
    margin-left: 48px;
    color: #C7DEB6;
}

div {
    background-color: #f1f1f1;
    grid-row: 1 / -1 ;
    grid-column: 2 / 3;
    margin: 50px 10px 10px 0;
    border-radius: 45px;
}

